# gcontact-sync

./: .dockerignore  .env.docker  .env.example  .gitignore  CHANGELOG.md  DOCKER.md  DOCKER_COMPOSE_VERIFICATION.md  DOCKER_FIX_SUMMARY.md  DOCKER_VERIFICATION.md  Dockerfile  E2E_DOCKER_TEST.md  E2E_VERIFICATION_SUMMARY.md  README.md  VERIFICATION_REPORT.md  docker-compose.yml  e2e-docker-test.sh  e2e_verification.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.py
.github/workflows/: docker-publish.yml
config/: config.example.yaml  sync_config.example.json
docs/: DOCKER.md  SYNOLOGY.md
gcontact_sync/: __init__.py  __main__.py  cli.py
gcontact_sync/api/: __init__.py  people_api.py
gcontact_sync/auth/: __init__.py  google_auth.py
gcontact_sync/backup/: __init__.py  manager.py
gcontact_sync/cli/: __init__.py  __main__.py  formatters.py  main.py
gcontact_sync/config/: __init__.py  generator.py  loader.py  sync_config.py
gcontact_sync/daemon/: __init__.py  scheduler.py  service.py
gcontact_sync/storage/: __init__.py  db.py
gcontact_sync/sync/: __init__.py  conflict.py  contact.py  engine.py  group.py  llm_matcher.py  matcher.py  photo.py
gcontact_sync/utils/: __init__.py  logging.py  normalization.py  paths.py
scripts/: com.gcontact-sync.plist  gcontact-sync.service  import_contacts.py  remove_duplicates.py  setup_docker.sh  setup_gcloud.sh
tests/: __init__.py  test_api.py  test_auth.py  test_backup.py  test_backup_e2e.py  test_backup_integration.py  test_cli.py  test_config.py  test_contact.py  test_daemon.py  test_group.py  test_llm_matcher.py  test_logging.py  test_matcher.py  test_normalization.py  test_paths.py  test_photo.py  test_storage.py  test_sync.py
